# Rotating-2D

./: CMakeLists.txt  Makefile  README.md
include/: Screen.hpp
include/SDL2/: SDL_config.h
lib/: CMakeLists.txt
src/: Screen.cpp  main.cpp
